--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>CALCULATOR v1.0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/min.main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
